# Workout-logger

./: .env  .gitignore  Cargo.toml
migrations/2023-02-21-205942_log_exercise/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  ops.rs  schema.rs
src/ops/: lifts_ops.rs
