[package]
name = "Workout-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.1", features = ["postgres"] }
dotenvy = "0.15"
actix-web = "4"
hyper = "0.14.24"
tokio = "1.25.0"
axum = "0.6.7"
